fix: buttons on iOS Safari

--- a/mono.css
+++ b/mono.css
@@ -1,3 +1,7 @@
+.mono-body {
+  background: #e1d8e6;
+}
+
 .mono-container {
   width: 100%;
   /* height: 100vh; */
@@ -7,7 +11,6 @@
   min-height: 100vh;
   align-items: center;
   flex-direction: column;
-  background: #e1d8e6;
 }
 .toplevelContainer{
   /* display:block; */
@@ -21,7 +24,6 @@
   overflow: hidden;
   align-items: center;
   flex-shrink: 0;
-  background: #e1d8e6;
   display:flex;
   padding:40px;
 }
@@ -125,8 +127,8 @@
 .mono-text240 {
   color: var(--dl-color-default-white);
   height: auto;
-  text-align: left;
-  line-height: 18px;
+  text-align: center;
+  line-height: auto;
 }
 .mono-framefooter {
   bottom:0px;
